--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -176,3 +176,10 @@
   volume={31},
   year={2002}
 }
+
+@misc{ai2-notes,
+    title="Artificial Intelligence II",
+    author="Sean Holden",
+    year="2015",
+    note="University of Cambridge Part II CST course notes"
+}
