--- a/docs/dissertation/el398_dissertation.tex
+++ b/docs/dissertation/el398_dissertation.tex
@@ -543,6 +543,7 @@ $$ p = 1 - \frac{1}{2^{\frac{n-1}{2}}\Gamma(\frac{n-1}{2})}\int_0^{\chi^2_{n-1}}
 This method can also estimate the size of the payload. From the expression for $\chi^2_{n-1}$, we see that it is sensitive to small changes: the value stays close to 0 when data contains the payload ($X_k - Z_k \approx 0$) and is big otherwise. We can iteratively build up the histogram and update $\chi^2_{n-1}$ as data for every frame comes in. We know that when the value starts increasing (and $p$-value decreases), the data no longer contains the payload, so we can put a bound on the payload size. 
 
 \subsection{Reversion Technique}
+\label{rev-tech-theory}
 Cao \emph{et al.}~\cite{cao2012video} proved that decoding then re-encoding (transcoding) a video tends to remove the changes caused by embedding the payload. That is, motion vectors tend to revert to their original values. So, if a video does not contain a payload, we expect differences between respective motion vectors of the original and transcoded video to be near zero.
 
 \begin{wrapfigure}[13]{R}{6cm}
@@ -762,15 +763,20 @@ This chapter described the design and the implementation details of the steganog
 \cleardoublepage
 \chapter{Evaluation}
 
+Coherent summary of the following chapter, quickly outlining evaluation approaches.
+
+
+\section{Satisfaction of requirements}
+
 How many of the
 original goals were achieved? Were they proved to have been achieved? Did the program,
 hardware, or theory really work?
 
-Coherent summary of the following chapter, quickly outlining evaluation approaches.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu lorem eget sem mollis venenatis ut sed augue. Sed euismod erat dignissim aliquet tincidunt. Phasellus pulvinar, erat viverra gravida fringilla, nulla tellus mollis tortor, sit amet pretium lacus tellus non lacus. Donec ullamcorper velit eget elit aliquam, a placerat lectus blandit. Integer non justo quis neque dapibus dictum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur ipsum lorem, dapibus non diam nec, molestie porttitor sem. Nam facilisis porttitor aliquet. 
 
 \section{Detectability of embedding algorithms}
 
-Most of the detectability evaluation was done in the previous chapter to justify further design improvements. Remaining interesting aspects are covered in this section.
+Most of the detectability evaluation was done in the previous chapter to justify further design improvements. This also allowed to evaluate the how effective implemented steganalysis techniques are. Remaining interesting aspects are covered in this section.
 
 \subsection{Detecting Xu's algorithm's embedding}
 \label{breaking-xu}
@@ -779,7 +785,7 @@ As previously discussed in section \ref{xu-alg}, Xu's algorithm makes some quest
 
 %Dubious thresholding on length, if threshold is on a plateau, see histograms. Which way to go? --- MVSteg isn't ideal either.
 
-One of such decisions is choosing whether to embed into the $x$ or $y$ component based on the phase of the motion vector. Xu's algorithm embeds into $x$ component if the phase is an acute angle, and into $y$ otherwise. However, if, for example, a motion vector consists of a large $y$ component and a small $x$ component, incrementing the small $x$ component would result in more disturbance to the motion.
+One of such decisions is choosing whether to embed into the $x$ or $y$ component based on the phase of the motion vector. Xu's algorithm uses the $x$ component if the phase is an acute angle, and the $y$ component otherwise, claiming it results in less disturbance to the motion. However, if, for example, a motion vector consists of a large $y$ component and a small $x$ component, incrementing the small $x$ component (as the selection policy suggests) would result in more disturbance to the motion, so the motivation behind such criteria is unclear.
 
 \begin{figure}[tbh]
 \centerline{
@@ -795,10 +801,9 @@ One of such decisions is choosing whether to embed into the $x$ or $y$ component
 \label{fig:xualg-mvsteg-visual}
 \end{figure}
 
-Figure \ref{fig:xualg-mvsteg-visual} shows how this results in visual artefacts, since Movest does not modify the prediction error. This saves the effort of trying to spot suspiciously odd motion vector component values. \texttt{MVSteg} does not leave a similarly noticeable footprint, since it always modifies the largest component which makes the relative increase negligible.
+Figure \ref{fig:xualg-mvsteg-visual} shows how, perhaps due to this selection policy, embedding produces artefacts. Since Movest does not modify the prediction error, these artefacts leave a visual footprint, which saves the effort of tediously trying to spot suspiciously odd motion vector component values. \texttt{MVSteg} always modifies the largest component which makes the relative change negligible and does not leave a similarly noticeable footprint.
 
 \begin{wrapfigure}{R}{6cm}
-\vspace{-15pt}
 \centering
 \includegraphics[scale=0.75]{img/4xembed.eps}
 \caption{Positions of repeated embedding. Lower bar corresponds to an inexact match.}
@@ -822,15 +827,52 @@ Authors of the algorithm also suggest embedding the same chunk of data four time
 
 Another interesting decision made by the algorithm is to modify motion vector components by incrementing them. This introduces a special case when motion vector points to the edge of the frame, so incrementing it would make it point beyond the edge and hence invalid. If sufficient checks to prevent this not in place, it can give out the fact that the video has been tampered with. Figure \ref{fig:vlc-corruption} shows that such corruption can be reported by the media player. \texttt{MVSteg}'s embedding can't be detected this way because it decrements motion vector components in an F4 fashion, which also makes it resistant to $\chi^2$ and histogram attacks, described earlier in section \ref{steg-tech}.
 
-
-
-Potential attack using the reversion technique (and mention tools again here).
-
 \subsection{Reversion Technique}
 \label{rev-tech}
 
-What is the result on the dataset per algorithm? How do you know your results are significant?
-Hide and Seek, MSteg, MVSteg.
+As explained in section \ref{rev-tech-theory}, the reversion technique considers differences between respective motion vectors of the original and the re-encoded (transcoded) video. Evaluating the effectiveness of this technique requires training a linear SVM classifier. Since SVMs do not require large datasets to give accurate results \textbf{cite?}, I have obtained a dataset of 55 freely-available stock videos with various degrees of motion, such as slow cloud movements or chaotic city timelapses. 28 of those were chosen to become stego videos, so that the ratio between stego and non-stego videos is roughly 50:50 (balanced dataset).
+
+For each sequential (non-randomised) embedding algorithm, the training and evaluation is done as follows:
+\begin{itemize}
+\item To obtain ``original'' videos, Movest encoder is used to embed random data into the 28 stego videos at their full capacity. The remaining 27 non-stego videos are also passed though the encoder, but no data is embedded (dummy pass).
+\item To obtain transcoded videos, all original videos are passed again through the encoder, letting FFmpeg to recompute motion vectors.
+\item Motion vectors are extracted from all videos.
+\item Motion vector data is imported into Matlab and frequencies of SAD values are computed using steganalysis suite's \texttt{computeSadFreqs.m} function.
+\item Frequency data, together with a labelling whether it came from a stego or a non-stego video, is passed into Matlab's \texttt{fitcsvm} function to train a linear SVM.
+\item To estimate the classification accuracy, the system performs 100 runs of \emph{k-fold cross validation}~\cite{ai2-notes}, with $k = 8$, as explained below. This is a common technique of evaluating performance of classifiers and it is available in Matlab (\texttt{crossval}).
+
+\textbf{8-fold cross validation:} the data set is randomly partitioned into 8 bins (6--7 videos each), and the algorithm performs 8 iterations by selecting one bin in turn. On every iteration, remaining 7 bins are used to train the classifier and the selected bin is used to evaluate its accuracy\footnote{Since the data set is balanced, the probability of correctly guessing whether the video is stego or non-stego is roughly $\frac{1}{2}$. The probability of correctly classifying 6 videos (number of videos in a bin for $k = 8$) by guessing is $(\frac{1}{2})^6 < 0.05$. Therefore picking $k = 8$ ensures (with at least 95\% confidence) that iteration's accuracy result is not obtained by chance.}. Accuracy result, averaged over 8 iterations, is reported back.
+
+Since the reported value depends on how favourable the random partitioning was, the system runs the 8-fold cross validation algorithm 100 times, to obtain a narrow 95\% confidence interval for the mean accuracy.  
+
+\end{itemize}
+
+Table \ref{tbl:rev-tech} presents the classification accuracy for each embedding algorithm.
+
+\begin{table}[tbh]
+\bgroup
+\def\arraystretch{1.3}%  1 is the default, change whatever you need
+\centerline{
+\begin{tabular}{|l|c|}
+\hline
+\textbf{Embedding algorithm} & \textbf{Classification accuracy, 95\% CI} \\
+\hline
+\textit{Random guess (baseline)} & $50\%$ \\
+Hide \& Seek & $100.00\% \pm 0.00\%$ \\ 
+MSteg & $100.00\% \pm 0.00\%$ \\ 
+F3 & $100.00\% \pm 0.00\%$ \\ 
+F4 & $96.09\% \pm 0.20\%$ \\
+Xu's algorithm & $78.91\% \pm 0.78\%$ \\
+MVSteg & $60.31\% \pm 0.66\%$ \\
+\hline
+\end{tabular}
+}
+\egroup
+\caption{Reversion technique classifier performance against each sequential embedding algorithm implemented.}
+\label{tbl:rev-tech}
+\end{table}
+
+The results are surprisingly good. My interpretation of the trend in the data is that the classifier performs very well against algorithms that do not exclude small motion vector component values during the embedding (Hide \& Seek, MSteg, F3 and F4), and worse on those that operate predominantly on large ones. This would also explain why Xu's algorithm performs worse than MVSteg: as we saw earlier in section \ref{breaking-xu}, due to its component selection logic Xu's algorithm can sometimes embed into small component values.
 
 \subsection{Varying embedding capacity}
 How does varying embedding capacity in Outguess1 affect detectability.
@@ -843,16 +885,69 @@ Talk about the differences (esp. randomised).
 
 Mention how fast transcoding is
 
-\section{Detectability by Humans (Study)}
+\section{Detectability by humans (study)}
 \label{exp-human-subj}
 
-\subsection{Hypothesis}
+\subsection{Study hypothesis}
+
+A study was conducted to test whether human participants are able to distinguish
+between a stego and a non-stego video. To test this, I looked into the numbers of times the participants were right or wrong when asked to identify the stego video out of the three ostensibly identical videos. I hypothesise that humans are not able to tell videos apart (null hypothesis); this hypothesis will be rejected if the data supports the opposite claim to a statistically significant level.
 
 \subsection{Experimental procedure}
 
+The experiment consisted of 10 trials. In each trial, the participant was given three ostensibly identical videos, each up to 30 seconds long, one of which has been modified to contain a hidden payload\footnote{Experiment description is the project proposal originally stated that 2 videos will be used. Using three videos and asking the participant to pick the odd one out eliminates the situation when the participant sees that videos are different, but is unable to tell which one is contains embedding.}. They had to choose which video they thought was modified and write its letter (\textsb{A}, \textsb{B} or \textsb{C}) into the experiment answer sheet.
+
+To increase chances of successful detection and more closely simulate steganalysis, the following measures were taken:
+\begin{itemize}
+\item Test subjects were computer-literate students (most of them were fellow computer scientists).
+\item Embedding has been done using the Hide \& Seek algorithm, which leaves a significant footprint by modifying every motion vector. The full embedding capacity of every video was used up to embed a random bytes.  
+\item Participants had full control over the playback, which meant they could watch videos however they liked: sequentially, side-by-side, repeatedly replay certain parts, inspect file sizes, zoom into certain regions of a video, use either their own or my screen \emph{etc.}
+\item First trial contained an artificially corrupted video (motion vectors were changed more drastically), to give participants an idea of what kind of visual footprint to expect. 
+\end{itemize} 
+
+As a precaution, videos given to the participants did not contain flashing images, were emotionally neutral, and free from distressful, disturbing, offensive or otherwise unsettling images. No personal data about the participants was collected.
+
 \subsection{Results}
 
-Was the study hypothesis confirmed?
+To be able to interpret the data, we need to define a theoretical model that would fit the experiment \textbf{cite?}. Let $n$ be the number of answers that participants gave and $X_i$ ($i \in [1, n]$) denote whether an answer was correct, \emph{i.e.} $X_i = 1$ if a participant correctly picked out a stego video in a trial and 0 otherwise. If the null hypothesis holds, we expect answers to be just as good as random guesses. Therefore $X_i$'s can be modelled as random variables with $\mathbb{P}(X_i = 1) = 1/3$, or, in other words, $X_i$'s follow Bernoulli distribution with $p = 1/3$. 
+
+To consider the overall data, we compute the sum of all $X_i$: $Y = \sum^n_{i=1} X_i$. For sufficiently large $n$, $Y$ follows the Binomial distribution with parameters $(n, p)$ \textbf{cite}. By de Moivre--Laplace theorem, $Y$ converges to the normal distribution with mean $np$ and variance $np(1-p)$ \textbf{cite}. This allows us to put 95\% confidence bounds on the value of $Y$~\cite[p.~316--318]{ai2-notes}:
+\[ np - 1.96 \sqrt{np(1-p)}  < Y <  np + 1.96 \sqrt{np(1-p)} \]
+
+If $Y$, obtained from the data set, does not lie in this range, the null hypothesis can be rejected with 95\% confidence.
+
+The data obtained from the experiment is presented in Table \ref{tbl:detect-exp-res}. 
+
+\begin{table}[tbh]
+\centering
+\bgroup
+\def\arraystretch{1.3}%  1 is the default, change whatever you need
+\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\textbf{Video \#} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6} & \textbf{7} & \textbf{8} & \textbf{9} & \textbf{10}\\
+\hline
+\textit{Correct answer} & \textit{B} & \textit{C} & \textit{C} & \textit{A} & \textit{B} & \textit{B} & \textit{A} & \textit{C} & \textit{B} & \textit{A}\\
+\hline
+Participant \#1  & B & C & C & B & A & C & A & B & A & C \\
+Participant \#2  & B & A & B & C & C & B & A & B & A & A \\
+Participant \#3  & B & C & B & A & C & A & A & B & A & C \\
+Participant \#4  & B & A & A & B & B & C & C & A & B & C \\
+Participant \#5  & B & A & C & B & C & A & A & C & B & C \\
+Participant \#6  & B & C & C & A & A & B & C & C & C & B \\
+Participant \#7  & B & A & A & C & A & C & C & C & C & A \\
+Participant \#8  & B & B & A & C & A & A & B & A & C & C \\
+Participant \#9  & B & C & B & C & A & C & A & C & C & C \\
+Participant \#10 & B & A & A & C & A & C & B & C & A & C \\
+Participant \#11 & B & B & B & C & C & B & C & A & C & C \\
+Participant \#12 & B & C & A & A & B & B & B & A & B & B \\
+\hline
+\end{tabular}
+\egroup
+\caption{Results of the distinguishability of video steganography experiment. Column one corresponds to the demo trial with an evidently corrupted video, so it's excluded from the analysis.}
+\label{tbl:detect-exp-res}
+\end{table}
+
+The data contains 108 answers ($n = \text{\# of participants} \times \text{\# of trials}$), so, according to the formula above, I expect $Y$ to be within the range $36 \pm 5$. The data has 32 correct answers, which is within the required range, so we \emph{cannot} conclude that humans \emph{are} able to identify implemented video steganography.
 
 \section{Evaluation of embedding and decoding process}
 
@@ -864,7 +959,7 @@ Say / evaluate what was done for embedding / decoding modules. Anything interest
 
 Say that project was a success.
 
-\section{Summary}
+\section{Accomplishments}
 
 \section{Lessons learnt}
 
